[gd_scene load_steps=2 format=3 uid="uid://cu3h62cxu26qs"]

[ext_resource type="Script" path="res://src/UI/Menus/Pause.gd" id="1_rnpn8"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rnpn8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.407843)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Buttons"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Resume" type="Button" parent="Buttons"]
layout_mode = 2
text = "Resume"

[node name="Spellcrafting" type="Button" parent="Buttons"]
layout_mode = 2
text = "Spellcrafting"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Buttons/Spellcrafting" to="." method="_on_spellcrafting_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
